syntax = "proto3";

package proto;

message RoomMessage {
  int32 id = 1;
  string ip = 2;
  int32 port = 3;
  string name = 4;
}